Translated label truncation on Edit Launch Configuration dialog org-ids/web-ide-issues#1080

--- a/bundles/org.eclipse.orion.client.cf/web/cfui/plugins/wizards/generic/genericDeploymentWizard.css
+++ b/bundles/org.eclipse.orion.client.cf/web/cfui/plugins/wizards/generic/genericDeploymentWizard.css
@@ -295,8 +295,7 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
 .manifestOverride {
 	text-align: center;
 	font-size: 9pt;
-	position: absolute;
-	bottom: 75px;
+	margin-top: 10px;
 	width: calc(100% - 24px);
 }
 td#host::before,
